Implement basic MMU and BUS
- Implement a MMU
- Implement a BUS abstraction
- Flatten out the codebase into a single package
- Improve the documentation of the codebase.